fix: corrige cor scrollbar

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -156,7 +156,7 @@ body.no-scroll {
 }
 
 .parts-container::-webkit-scrollbar-thumb {
-  background: #3498db;
+  background: #ccc;
   border-radius: 4px;
 }
 
